# im-lazy

./: .gitignore  CMakeLists.txt  main.cpp
